Mon May 18 08:09:16 UTC 2009  Vladimir Zykov  <vz@prismtech.com>

        * tao/Transport.h:
        * tao/LocateRequest_Invocation.cpp:
        * tao/Transport.inl:

          Fixed bug#3676. Now after sending LocateRequest message
          transport will remain in a state when no first request is
          send. This is necessary for codeset negotiation which
          happens in the first normal request.

        * tests/Bug_3676_Regression/client.cpp:
        * tests/Bug_3676_Regression/Hello.mpc:
        * tests/Bug_3676_Regression/Hello.cpp:
        * tests/Bug_3676_Regression/Test.idl:
        * tests/Bug_3676_Regression/server.cpp:
        * tests/Bug_3676_Regression/Hello.h:
        * tests/Bug_3676_Regression/README:
        * tests/Bug_3676_Regression/run_test.pl:
        * bin/tao_orb_tests.lst:

          Added a regression test and scheduled it for run.

Fri May 15 12:50:00 UTC 2009  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_3674_Regression/test.cpp:

          Removed unused parameter warnings.

Fri May 15 11:50:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Bug_2800_Regression/NamingTask.cpp:
        * orbsvcs/tests/Bug_3673_Regression/NamingTask.cpp:
          Fixed memory leaks

Fri May 15 10:50:00 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/Notify_Service/Notify_Service.cpp:
          Only print debug messages when ORB debug is enabled

        * orbsvcs/tests/Bug_3673_Regression/Bug_3873_Regression.mpc:
          Remvoed

        * orbsvcs/tests/Bug_3673_Regression/Bug_3673_Regression.mpc:
          Added

        * orbsvcs/tests/Bug_3673_Regression/client.cpp:
          Make 10 iterations

Fri May 15 08:10:00 UTC 2009  Simon Massey  <sma at prismtech dot com>

        * tests/Bug_3674_Regression/test.cpp:

          Fixed Fuzz error (MS_VER_ 1200)

Wed May 13 19:44:04 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * tao/Strategies/DIOP_Acceptor.cpp:
